--- a/SortAlgorithm.vcxproj.filters
+++ b/SortAlgorithm.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="cmd.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Experiments.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
